typescript/checker/tests/conformance/statements/for-ofStatements/ES5For-of8.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            68,
        ),
        hi: BytePos(
            75,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    54,
                ),
                hi: BytePos(
                    55,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            54,
                        ),
                        hi: BytePos(
                            55,
                        ),
                        ctxt: #0,
                    },
                    value: 0.0,
                },
            ),
        },
    ),
    right: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    80,
                ),
                hi: BytePos(
                    83,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            80,
                        ),
                        hi: BytePos(
                            83,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('a' type=inline),
                    has_escape: false,
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/statements/for-ofStatements/ES5For-of8.ts:5:6
  |
5 | for (foo().x of ['a', 'b', 'c']) {
  |      ^^^^^^^

